# cyber-job-hunter

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: profile.yaml  sources.yaml
dashboard/: __init__.py  app.py  data.py  format.py
dashboard/views/: __init__.py  detail.py  listing.py  stats.py
scripts/: export_csv.py  init_db.py  run_scrape.py
src/: config.py  deduplication.py  filters.py  models.py  scoring.py  storage.py
src/scrapers/: __init__.py  actiris.py  base.py  capgemini.py  cream.py  devoteam.py  easi.py  enisa.py  epam.py  kpmg.py  nexova.py  nviso.py  orange_cyberdefense.py  recruitee.py  remotive.py  smals.py  sopra_steria.py  toreon.py  travaillerpour.py  workday.py
tests/: test_actiris.py  test_base_scraper.py  test_capgemini.py  test_cream.py  test_dashboard_data.py  test_dashboard_views.py  test_devoteam.py  test_easi.py  test_enisa.py  test_epam.py  test_filters.py  test_kpmg.py  test_nexova.py  test_nviso.py  test_orange_cyberdefense.py  test_recruitee.py  test_remotive.py  test_run_scrape.py  test_scoring.py  test_smals.py  test_sopra_steria.py  test_storage.py  test_toreon.py  test_travaillerpour.py  test_workday.py
