[project]
name = "cyber-job-hunter"
version = "0.1.0"
description = "Automated cyber security job scraper with profile-based scoring — personal portfolio project"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Johan-Emmanuel Hatchi" },
]
keywords = ["cybersecurity", "job-scraper", "blue-team", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/Joedom971/cyber-job-hunter"
Issues  = "https://github.com/Joedom971/cyber-job-hunter/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─── Ruff ────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff specific
    "PL",            # pylint subset
    "S",             # bandit (sécurité)
]
ignore = [
    "S101",  # assert utilisé (ok dans les tests)
    "PLR0913",  # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR2004"]

# ─── Mypy ────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["feedparser.*", "hishel.*"]
ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
markers = [
    "integration: tests qui font de vrais appels réseau (skipped par défaut)",
    "slow: tests lents (>1s)",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
